// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/ActionSheetBase should renders correctly Item 1`] = `
<View
  accessibilityLabel="actionSheetsItem"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 12,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 30,
        "marginHorizontal": 8,
        "minHeight": 50,
        "paddingHorizontal": 20,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#2B78EE",
            "fontFamily": "Inter-Medium",
            "fontSize": 16,
            "fontWeight": "500",
            "lineHeight": 20,
            "minHeight": 20,
          },
          {
            "paddingVertical": 15,
          },
        ]
      }
    >
      title
    </Text>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ActionSheetBase should renders correctly Item with  textFont 1`] = `
<View
  accessibilityLabel="actionSheetsItem"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderTopLeftRadius": 12,
        "borderTopRightRadius": 12,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginHorizontal": 8,
        "minHeight": 50,
        "paddingHorizontal": 20,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 18,
            "minHeight": 18,
          },
          {
            "paddingVertical": 15,
          },
        ]
      }
    >
      title
    </Text>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ActionSheetBase should renders correctly Item with !selected 1`] = `
<View
  accessibilityLabel="actionSheetsItem"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderBottomLeftRadius": 12,
        "borderBottomRightRadius": 12,
        "borderTopColor": "#D0D6E0",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 8,
        "marginHorizontal": 8,
        "minHeight": 50,
        "paddingHorizontal": 20,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 18,
            "minHeight": 18,
          },
          {
            "paddingVertical": 15,
          },
        ]
      }
    >
      title
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    needsOffscreenAlphaCompositing={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "opacity": 1,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "aspectRatio": 1,
          "backgroundColor": "transparent",
          "borderColor": "rgba(21, 28, 44, 0.2)",
          "borderRadius": 11,
          "borderWidth": 2,
          "justifyContent": "center",
          "width": 22,
        }
      }
      value="title"
    />
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ActionSheetBase should renders correctly Item with disabled 1`] = `
<View
  accessibilityLabel="actionSheetsItem"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 12,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 30,
        "marginHorizontal": 8,
        "minHeight": 50,
        "paddingHorizontal": 20,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#9BA1B0",
            "fontFamily": "Inter-Medium",
            "fontSize": 16,
            "fontWeight": "500",
            "lineHeight": 20,
            "minHeight": 20,
          },
          {
            "paddingVertical": 15,
          },
        ]
      }
    >
      title
    </Text>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ActionSheetBase should renders correctly Item with leftIcon 1`] = `
<View
  accessibilityLabel="actionSheetsItem"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 12,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 30,
        "marginHorizontal": 8,
        "minHeight": 50,
        "paddingHorizontal": 20,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <View
      style={
        {
          "paddingRight": 12,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#353A45",
            "fontFamily": "Neotis",
            "fontSize": 24,
          }
        }
      >
        
      </Text>
    </View>
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#2B78EE",
            "fontFamily": "Inter-Medium",
            "fontSize": 16,
            "fontWeight": "500",
            "lineHeight": 20,
            "minHeight": 20,
          },
          {
            "paddingVertical": 15,
          },
        ]
      }
    >
      title
    </Text>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ActionSheetBase should renders correctly Item with selected 1`] = `
<View
  accessibilityLabel="actionSheetsItem"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 12,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 8,
        "marginHorizontal": 8,
        "minHeight": 50,
        "paddingHorizontal": 20,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 20,
            "minHeight": 20,
          },
          {
            "paddingVertical": 15,
          },
        ]
      }
    >
      title
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "maxWidth": "100%",
          "opacity": 1,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "borderColor": "rgba(21, 28, 44, 0.2)",
            "borderRadius": 4,
            "borderWidth": 0,
            "height": 20,
            "width": 20,
          },
          undefined,
        ]
      }
      value="title"
    >
      <SvgMock
        fill="#2B78EE"
        height={20}
        width={20}
      />
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ActionSheetBase should renders correctly inner item 1`] = `
<View
  accessibilityLabel="actionSheetsItem"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderTopColor": "#D0D6E0",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginHorizontal": 8,
        "minHeight": 50,
        "paddingHorizontal": 20,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 18,
            "minHeight": 18,
          },
          {
            "paddingVertical": 15,
          },
        ]
      }
    >
      title
    </Text>
  </View>
</View>
`;
